--- a/frontend/src/styles/Note.module.css
+++ b/frontend/src/styles/Note.module.css
@@ -2,6 +2,10 @@
   background-color: antiquewhite;
 }
 
+.cardBody {
+  overflow: hidden;
+  mask-image: linear-gradient(180deg, #000, transparent);
+}
 .cardText {
   white-space: pre-line;
 }
